# TheAntium-Server

./: .gitignore  Cargo.toml  README.md  build  database.md  init.sql  server.asm
front/: register.html  signin.html
front/css/: reset.css  style.css
src/: database.rs  main.rs
src/api/: auth.rs  mod.rs  posts.rs  types.rs  users.rs
src/db/: mod.rs  post.rs  user.rs
src/db/sql/: create.sql  init.sql
src/db/sql/post/: create.sql
src/db/sql/user/: create.sql  register.sql
src/front/: index.html
src/front/css/: style.css
telegramBot/: Cargo.toml  README.md
telegramBot/src/: main.rs
