[package]
name = "TheAntium-Server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
argon2 = { version = "0.5.3", features = ["simple", "std"] }
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.45.1", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
